--- a/_config.yml
+++ b/_config.yml
@@ -102,8 +102,8 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/sarah-van-eyndhoven-170514138/"
-  orcid            : "https://orcid.org/0000-0003-1463-1957"
+  linkedin         : "sarah-van-eyndhoven-170514138"
+  orcid            : "0000-0003-1463-1957"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
