--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sarah van Eyndhoven"
-  avatar           : "profile.png"
+  avatar           : "IMG_2206.png"
   bio              : "Linguistics PhD student at the University of Edinburgh studying 18th century Scots"
   location         : "The University of Edinburgh"
   employer         :
