--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "svaney22.github.io"
+  github           : "svaney22"
   google_plus      :
   keybase          :
   instagram        :
