--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "The University of Edinburgh"
   employer         :
   pubmed           : 
-  googlescholar    : #"https://scholar.google.com/citations?hl=en&user=M086JgUAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=M086JgUAAAAJ"
   email            : "s1890120@ed.ac.uk"
   researchgate     : "https://www.researchgate.net/profile/Sarah-Van-Eyndhoven-2"
   uri              :
