--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Sarah van Eyndhoven"
   avatar           : "20231005-DSCF4127.jpg"
   bio              : "Postdoctoral Fellow student at the New Zealand Institute of Language, Brain and Behaviour (NZILBB)"
-  location         : "The University of Canterbury, New Zealand"
+  location         : "The University of Canterbury"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=M086JgUAAAAJ"
