--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sarah van Eyndhoven"
   avatar           : "20231005-DSCF4127.jpg"
-  bio              : "Postdoctoral Fellow student at the New Zealand Institute of Language, Brain and Behaviour (NZILBB)"
+  bio              : "Postdoctoral Fellow at the New Zealand Institute of Language, Brain and Behaviour (NZILBB)"
   location         : "The University of Canterbury"
   employer         :
   pubmed           : 
